SalesforceToPaypal/force-app/main/default/objects/PayPal_Webhook_Log__c/PayPal_Webhook_Log__c.object-meta.xml
<CustomObject>
    <description>Logs webhook events from PayPal</description>
    <label>PayPal Webhook Log</label>
    <nameField>
        <displayFormat>WHK-{00000000}</displayFormat>
        <label>Webhook Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PayPal Webhook Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>