SalesforceToPaypal/force-app/main/default/objects/PayPal_Webhook_Log__c/fields/Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Event_ID__c</fullName>
    <description>PayPal webhook event ID</description>
    <label>Event ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>