SalesforceToPaypal/force-app/main/default/objects/PayPal_Webhook_Log__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>PayPal webhook event type</description>
    <label>Event Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>