SalesforceToPaypal/force-app/main/default/objects/PayPal_Webhook_Log__c/fields/Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Processed_Date__c</fullName>
    <description>Date and time when webhook was processed</description>
    <label>Processed Date</label>
    <type>DateTime</type>
</CustomField>