SalesforceToPaypal/force-app/main/default/objects/PayPal_Webhook_Log__c/fields/Webhook_Data__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Data__c</fullName>
    <description>Raw webhook data JSON</description>
    <label>Webhook Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>